--- a/.github/workflows/OpenWrt-ImmortalWrt-24.10.yml
+++ b/.github/workflows/OpenWrt-ImmortalWrt-24.10.yml
@@ -171,7 +171,7 @@ jobs:
         if: steps.tag.outputs.status == 'success' && !cancelled()
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           body_path: release.txt
           files: ${{ env.FIRMWARE }}/*
 
