--- a/.github/workflows/OpenWrt_ImmortalWrt_24.10-test.yml
+++ b/.github/workflows/OpenWrt_ImmortalWrt_24.10-test.yml
@@ -179,32 +179,24 @@ jobs:
           files: ${{ env.FIRMWARE }}/*
 
       - name: Telegram notification upload success
-        if: steps.compile.outputs.status == 'success' && env.TELEGRAM_WORK_PUSH == 'true'
+        if: steps.tag.outputs.status == 'success' && env.TELEGRAM_WORK_PUSH == 'true'
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            ♨️ 【${{ env.FILE_NAME }}】项目编译完成 ♨️
-            
-            💻 架构: ${{ env.OpenWrt_ARCH }}
-  
-            📂 源码: ${{ env.REPO_URL }}
-  
-            🌳 分支: ${{ env.REPO_BRANCH }}
-  
-            ⏱️ 编译时间: ${{ env.COMPILE_DATE }}
-  
-            🌐 管理地址: 192.168.1.11 , 子网掩码: 255.255.255.0
-  
-            👤 用户名: root
-  
-            🔒 密码: password 
-            
+            ♨️ 【${{ env.FILE_NAME }}】项目编译完成 ♨️            
+            💻 架构: ${{ env.OpenWrt_ARCH }}  
+            📂 源码: ${{ env.REPO_URL }}  
+            🌳 分支: ${{ env.REPO_BRANCH }}  
+            ⏱️ 编译时间: ${{ env.COMPILE_DATE }}  
+            🌐 管理地址: 192.168.1.11 , 子网掩码: 255.255.255.0  
+            👤 用户名: root  
+            🔒 密码: password             
             https://github.com/tudaole/OpenWrt-ImmortalWrt-24.10/releases/tag/${{ env.REPO_NAME }}_${{ env.OpenWrt_VERSION }}_${{ env.OpenWrt_ARCH }}
   
       - name: Enterprise WeChat notification upload success
-        if: steps.compile.outputs.status == 'success' && env.WECHAT_WORK_PUSH == 'true'
+        if: steps.tag.outputs.status == 'success' && env.WECHAT_WORK_PUSH == 'true'
         run: |
           curl -X POST "https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=${{ secrets.WEBHOOK_SEND_KEY }}" \
           -H "Content-Type: application/json" \
