--- a/.github/workflows/OpenWrt_2410_x64-test.yml
+++ b/.github/workflows/OpenWrt_2410_x64-test.yml
@@ -141,7 +141,7 @@ jobs:
           rm -rf immortalwrt-${{ env.OpenWrt_ARCH }}-generic.manifest
           rm -rf immortalwrt-${{ env.OpenWrt_ARCH }}-generic-squashfs-rootfs.img.gz
           rm -rf immortalwrt-${{ env.OpenWrt_ARCH }}-generic-rootfs.tar.gz
-          mv immortalwrt-${{ env.OpenWrt_ARCH }}-generic-squashfs-combined-efi.img.gz immortalwrt-${{ env.OpenWrt_VERSION }}-${{ env.OpenWrt_ARCH }}-${{ env.FILE_NAME }}-efi-${{ env.COMPILE_DATE }}.img.gz
+          mv immortalwrt-${{ env.OpenWrt_ARCH }}-generic-squashfs-combined-efi.img.gz ${{ env.FILE_NAME }}-efi-${{ env.COMPILE_DATE }}.img.gz
           echo -e "------------------------------- 文件列表 -------------------------------"
           ls
 
