--- a/.github/workflows/OpenWrt_2410_x64-test.yml
+++ b/.github/workflows/OpenWrt_2410_x64-test.yml
@@ -141,7 +141,7 @@ jobs:
           rm -rf immortalwrt-${{ env.OpenWrt_ARCH }}-generic.manifest
           rm -rf immortalwrt-${{ env.OpenWrt_ARCH }}-generic-squashfs-rootfs.img.gz
           rm -rf immortalwrt-${{ env.OpenWrt_ARCH }}-generic-rootfs.tar.gz
-          mv immortalwrt-${{ env.OpenWrt_ARCH }}-generic-squashfs-combined-efi.img.gz ${{ env.FILE_NAME }}-efi-${{ env.COMPILE_DATE }}.img.gz
+          mv immortalwrt-${{ env.OpenWrt_ARCH }}-generic-squashfs-combined-efi.img.gz ${{ env.FILE_NAME }}-uefi-${{ env.COMPILE_DATE }}.img.gz
           echo -e "------------------------------- 文件列表 -------------------------------"
           ls
 
@@ -193,7 +193,7 @@ jobs:
             🌐 管理地址: 192.168.1.11 , 子网掩码: 255.255.255.0  
             👤 用户名: root  
             🔒 密码: password             
-            https://github.com/tudaole/OpenWrt-ImmortalWrt-24.10/releases/tag/${{ env.REPO_NAME }}_${{ env.OpenWrt_VERSION }}_${{ env.OpenWrt_ARCH }}
+            https://github.com/tudaole/OpenWrt-ImmortalWrt-24.10/releases/tag/${{ env.FILE_NAME }}
   
       - name: Enterprise WeChat notification upload success
         if: steps.tag.outputs.status == 'success' && env.WECHAT_WORK_PUSH == 'true'
@@ -207,21 +207,14 @@ jobs:
                   {
                     "title": "♨️ 【${{ env.FILE_NAME }}】项目编译完成 ♨️",
                     "description": "- ❀  固件名称：${{ env.FILE_NAME }}-${{ env.REPO_BRANCH }}\n
-                      💻 架构: ${{ env.OpenWrt_ARCH }}
-            
-                      📂 源码: ${{ env.REPO_URL }}
-            
-                      🌳 分支: ${{ env.REPO_BRANCH }}
-            
-                      ⏱️ 编译时间: ${{ env.COMPILE_DATE }}
-            
-                      🌐 管理地址: 192.168.1.11 , 子网掩码: 255.255.255.0
-            
-                      👤 用户名: root
-            
-                      🔒 密码: password 
-                      
-                    "url": "https://github.com/tudaole/OpenWrt-ImmortalWrt-24.10/releases/tag/${{ env.REPO_NAME }}_${{ env.OpenWrt_VERSION }}_${{ env.OpenWrt_ARCH }}"
+                      💻 架构: ${{ env.OpenWrt_ARCH }}            
+                      📂 源码: ${{ env.REPO_URL }}            
+                      🌳 分支: ${{ env.REPO_BRANCH }}            
+                      ⏱️ 编译时间: ${{ env.COMPILE_DATE }}            
+                      🌐 管理地址: 192.168.1.11 , 子网掩码: 255.255.255.0            
+                      👤 用户名: root            
+                      🔒 密码: password                       
+                    "url": "https://github.com/tudaole/OpenWrt-ImmortalWrt-24.10/releases/tag/${{ env.FILE_NAME }}"
                   }
                 ]
               }
