--- a/.github/workflows/OpenWrt_2410_x64-test.yml
+++ b/.github/workflows/OpenWrt_2410_x64-test.yml
@@ -17,7 +17,6 @@ env:
   DIY_P2_SH: immortalwrt/diy-part2-x64-test.sh
   FILE_NAME: OpenWrt_2410_x64-test
   TZ: Asia/Shanghai
-  TELEGRAM_WORK_PUSH: true
   WECHAT_WORK_PUSH: true
 
 jobs:
@@ -178,23 +177,6 @@ jobs:
           body_path: release.txt
           files: ${{ env.FIRMWARE }}/*
 
-      - name: Telegram notification upload success
-        if: steps.tag.outputs.status == 'success' && env.TELEGRAM_WORK_PUSH == 'true'
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            ♨️ 【${{ env.FILE_NAME }}】项目编译完成 ♨️            
-            💻 架构: ${{ env.OpenWrt_ARCH }}  
-            📂 源码: ${{ env.REPO_URL }}  
-            🌳 分支: ${{ env.REPO_BRANCH }}  
-            ⏱️ 编译时间: ${{ env.COMPILE_DATE }}  
-            🌐 管理地址: 192.168.1.11 , 子网掩码: 255.255.255.0  
-            👤 用户名: root  
-            🔒 密码: password             
-            https://github.com/tudaole/OpenWrt-ImmortalWrt-24.10/releases/tag/${{ env.FILE_NAME }}
-  
       - name: Enterprise WeChat notification upload success
         if: steps.tag.outputs.status == 'success' && env.WECHAT_WORK_PUSH == 'true'
         run: |
@@ -205,7 +187,7 @@ jobs:
               "news": {
                 "articles": [
                   {
-                    "title": "♨️ 【${{ env.FILE_NAME }}】项目编译完成 ♨️",
+                    "title": "♨️ 【ImmortalWrt-${{ env.FILE_NAME }}】项目编译完成 ♨️",
                     "description": "- ❀  固件名称：${{ env.FILE_NAME }}-${{ env.REPO_BRANCH }}\n
                       💻 架构: ${{ env.OpenWrt_ARCH }}            
                       📂 源码: ${{ env.REPO_URL }}            
